# pdp10asm

./: .coveragerc  .flake8  .pre-commit-config.yaml  listing.txt  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
pdp10asm/: __init__.py  __main__.py  assembler.py  characters.py  cli.py  constants.py  exceptions.py  expressions.py  listing.py  output.py  passes.py  program.py  pseudo_operators.py  source_line.py  symbol_table.py
pdp10asm/listing/: __init__.py  base_listing.py  binary_listing.py  source_listing.py
pdp10asm/pseudo_operators/: __init__.py  pseudo_operators.py  pseudo_ops.py
tests/: conftest.py  test_assembled_line.py  test_base_assembler_pass.py  test_base_output.py  test_characters.py  test_cli.py  test_constants.py  test_expressions.py  test_first_pass_assembler.py  test_listing.py  test_pdp10assembler.py  test_program.py  test_psudo_operators.py  test_rim_output.py  test_second_pass_assembler.py  test_source_line.py  test_symbol_table.py
tests/asm/: hello_world.asm  memory_block_to_paper_tape_raw.asm  second_pass_error.asm
tests/listings/: hello_world.txt  hello_world_src.txt  memory_block_to_paper_tape_raw.txt  memory_block_to_paper_tape_raw_src.txt
tests/rim/: hello_world.rim  memory_block_to_paper_tape_raw.rim
tests/test_listing/: test_binary_listing.py  test_source_listing.py
tests/test_passes/: test_base_assembler_pass.py  test_first_pass_assembler.py  test_second_pass_assembler.py
