[project]
name = "pdp10asm"
version = "0.1.0"
description = "DEC PDP-10 Assembler"
authors = [
    {name = "Luke Shiner",email = "luke@lukeshiner.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
    
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
flake8-bugbear = "^24.12.12"
flake8-docstrings = "^1.7.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-integration = "^0.2.3"

[project.scripts]
pdp10asm = 'pdp10asm.cli:cli'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
